fixed compoent alignment.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -102,4 +102,9 @@ body {
 	height: 100px;
 	border: 1px solid #000;
 	text-align: center;
+
+	span {
+		margin-top: 38px;
+		display: block;
+	}
 }
